--- a/tools/meson.build
+++ b/tools/meson.build
@@ -1,9 +1,10 @@
 tools_dir = meson.current_source_dir()
 
-compare_nm = [join_paths(tools_dir, 'compare_nm.py')]
-compare_time = [join_paths(tools_dir, 'compare_time.py'), meson.build_root()]
-gdb_hw_script = [join_paths(tools_dir, 'gdb_stm32.sh')]
+compare_nm = files('compare_nm.py')
+compare_time = files('compare_time.py')
+gdb_hw_script = files('gdb_stm32.sh')
 qemu_test_runner = files('qemu_test_runner.py')
+dump_cmds = files('dump_cmds.py')
 
 if get_option('arch') == 'arm'
   qemu_cmd = files('qemu_stm32.sh')
