--- a/settings/meson.build
+++ b/settings/meson.build
@@ -94,10 +94,10 @@ ara_gen_freertos_targets = ['vanilla',
                             'passthrough'
                            ]
 
-foreach t : ara_gen_freertos_targets
-  set_variable('ara_gen_cmd_'+t, ara_gen_cmd +
+foreach target : ara_gen_freertos_targets
+  set_variable('ara_gen_cmd_'+target, ara_gen_cmd +
                              [ '--step-settings',
-                               files(join_paths(settings_dir, 'freertos_'+t+'.json')),
+                               files(join_paths(settings_dir, 'freertos_'+target+'.json')),
                              ]
               )
 endforeach
