--- a/graph/cgraph/meson.build
+++ b/graph/cgraph/meson.build
@@ -15,6 +15,7 @@ llvm_data_mod = py3_inst.extension_module('llvm_data',
 llvm_data_dir = meson.current_build_dir()
 
 
+# libgraph
 libgraph_dependencies = [py3_inst.dependency(), llvm_dep, boost_dep, graph_tool_dep, common_dep, pyllco_dep]
 
 
