--- a/libs/meson.build
+++ b/libs/meson.build
@@ -1,5 +1,5 @@
+# this variables are filled in the subdirs
 libs_includes = []
-
 libs_targets = []
 
 subdir('platform')
@@ -7,4 +7,5 @@ subdir('include')
 subdir('sra')
 subdir('freertos')
 subdir('osek')
+
 libs_targets += libsra_ar
