--- a/meson.build
+++ b/meson.build
@@ -23,7 +23,7 @@ llc = find_program(llvm_bindir / 'llc', version: llvm_version)
 llvm_link = find_program(llvm_bindir / 'llvm-link', version: llvm_version)
 llvm_opt = find_program(llvm_bindir / 'opt', version: llvm_version)
 
-boost_dep = dependency('boost', modules: ['graph', 'python3'], include_type: 'system')
+boost_dep = dependency('boost', modules: ['graph', 'python3'])
 graph_tool_dep = dependency('graph-tool-py' + py3_inst.language_version(), include_type: 'system')
 
 ## pyllco
