--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,4 +1,6 @@
-option('arch', type: 'combo', choices: ['arm', 'i386', 'posix'], value: 'arm')
+option('arch', type: 'combo', choices: ['arm', 'i386'], value: 'arm',
+    description: 'Set the architecture for which the test applications are built.')
+
 option('disable_qemu_tests', type: 'boolean', value: false)
 option('disable_step_tests', type: 'boolean', value: false)
 option('disable_toplevel_tests', type: 'boolean', value: false)
