meson: arm gcc detection fix

--- a/settings/meson.build
+++ b/settings/meson.build
@@ -74,7 +74,7 @@ elif get_option('arch') == 'arm'
   endforeach
   # external gcc dir
   if get_option('arm_gcc_version') == 'default'
-    system_gcc = find_program('gcc')
+    system_gcc = find_program('arm-none-eabi-gcc')
     r = run_command(py3_inst, gcc_version, system_gcc.path())
     if r.returncode() != 0
       error('Cannot extract default GCC option. Consider setting "arm_gcc_version".')
