--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -27,6 +27,7 @@ native_step_pyx_gen = custom_target('native_step_pyx',
                  'cdummy.pxd',
                  'comp_insert.pxd',
                  'cstep.pxd',
+                 'fake_entry_point.pxd',
                  'fn_single_exit.pxd',
                  'icfg.pxd',
                  'ir_reader.pxd',
@@ -49,6 +50,7 @@ plib = py3_inst.extension_module('native_step',
         'bb_split.cpp',
         'cdummy.cpp',
         'comp_insert.cpp',
+        'fake_entry_point.cpp',
         'fn_single_exit.cpp',
         'icfg.cpp',
         'ir_reader.cpp',
