--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -34,6 +34,7 @@ native_step_pyx_gen = custom_target('native_step_pyx',
                  'ir_writer.pxd',
                  'llvm_map.pxd',
                  'llvm_optimization.pxd',
+                 'load_os_config.pxd',
                  'replace_syscalls_create.pxd',
                  'replace_syscalls_create.pxi',
                  'value_analysis_core.pxd',
@@ -57,6 +58,7 @@ plib = py3_inst.extension_module('native_step',
         'ir_writer.cpp',
         'llvm_map.cpp',
         'llvm_optimization.cpp',
+        'load_os_config.cpp',
         'replace_syscalls_create.cpp',
         'step_manager.cpp',
         'value_analysis_core.cpp',
