--- a/libs/include/freertos/meson.build
+++ b/libs/include/freertos/meson.build
@@ -1,6 +1,8 @@
 freertos_includes = ['-I', meson.current_source_dir()]
 if get_option('arch') == 'arm'
   subdir('arm')
+elif get_option('arch') == 'i386'
+  subdir('i386')
 else
   error('unknown arch')
 endif
