--- a/settings/meson.build
+++ b/settings/meson.build
@@ -33,6 +33,7 @@ obj_flags = ['-c']
 
 if get_option('arch') == 'i386'
   clang_flags += '--target=i386-pc-linux-gnu'
+  clang_flags += '-DX86_STUB=1'
 elif get_option('arch') == 'arm'
   clang_flags += ['--target=' + target_triple,
                   '-mthumb',
