--- a/test/meson.build
+++ b/test/meson.build
@@ -1,58 +1,67 @@
 if not get_option('disable_step_tests')
     test('dependency-resolving',
-            py3_inst,
-            args : files('dependency_resolving.py'),
-            env : [python_path]
+        py3_inst,
+        args: files('dependency_resolving.py'),
+        env: [python_path],
+        suite: 'steps'
     )
 
     test('multiple-configured-steps',
-            py3_inst,
-            args : files('multiple_configured_steps.py'),
-            env : [python_path]
+        py3_inst,
+        args: files('multiple_configured_steps.py'),
+        env: [python_path],
+        suite: 'steps'
     )
 
     test('oil-parsing',
-      py3_inst,
-      args : [files('oil.py'), osek_oiltest[0], osek_oiltest[1]],
-      env : [python_path]
+        py3_inst,
+        args: [files('oil.py'), osek_oiltest[0], osek_oiltest[1]],
+        env: [python_path],
+        suite: 'steps'
     )
 
     test('ir-reader',
-      py3_inst,
-      args: [files('ir_reader.py'), files('empty.json'), gpslogger_application],
-      env: [python_path]
+        py3_inst,
+        args: [files('ir_reader.py'), files('empty.json'), gpslogger_application],
+        env: [python_path],
+        suite: 'steps'
     )
     test('ir-reader-false-syntax',
-      py3_inst,
-      args: [files('ir_reader.py'), files('empty.json'), files('ir_reader.false_syntax.ll')],
-      should_fail: true,
-      env: [python_path]
+        py3_inst,
+        args: [files('ir_reader.py'), files('empty.json'), files('ir_reader.false_syntax.ll')],
+        should_fail: true,
+        env: [python_path],
+        suite: 'steps'
     )
     test('ir-reader-multiple-symbols',
-      py3_inst,
-      args: [files('ir_reader.py'), files('empty.json'), files('ir_reader.multiple_symbols.ll')],
-      should_fail: true,
-      env: [python_path]
+        py3_inst,
+        args: [files('ir_reader.py'), files('empty.json'), files('ir_reader.multiple_symbols.ll')],
+        should_fail: true,
+        env: [python_path],
+        suite: 'steps'
     )
 
     test('dummy-test',
-       py3_inst,
-       args: [files('../ara.py'), 'empty',
-              '-v',
-              '--step-settings', files('dummy_settings.json')],
-       env : [python_path]
+        py3_inst,
+        args: [files('../ara.py'), 'empty',
+               '-v',
+               '--step-settings', files('dummy_settings.json')],
+        env : [python_path],
+        suite: 'steps'
     )
 
     test('syscall',
-      py3_inst,
-      args: [files('syscall.py'), files('syscall.json'), freertos_syscall],
-      env: [python_path]
+        py3_inst,
+        args: [files('syscall.py'), files('syscall.json'), freertos_syscall],
+        env: [python_path],
+        suite: 'steps'
     )
 
     test('icfg',
-      py3_inst,
-      args: [files('icfg.py'), files('icfg.json'), freertos_icfg],
-      env: [python_path]
+        py3_inst,
+        args: [files('icfg.py'), files('icfg.json'), freertos_icfg],
+        env: [python_path],
+        suite: 'steps'
     )
 
     subdir('native_step_test')
